WIP: login, routing code modules

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
 <body>
+	<% var incorrect %>
+	<%= incorrect %>
 	<div class="loginBox"> <!-- Create a divison for login -->
 	<img src="avatar.jpg" class="avatar">
 		<h1>Login Here</h1>
@@ -14,7 +16,7 @@
 			<p>Password</p>
 			<input type="password" name="password" placeholder="Enter Password">
 			<input type="submit" name="" value="Login">
-			<a href="sign-in"> Don't have an account ? Create an account here </a>
+			<a href="sign-up"> Don't have an account ? Create an account here </a>
 		</form>
 	</div>
 </body>
