change_route_and_add_area

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="loginBox">
-	<p class="signIn"><a href="login">Sign in</a></p>
+	<p class="signIn"><a href="/user/login">Sign in</a></p>
 </div>
 </body>
 </html>
