--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Login Form Design</title>
-	<link rel="stylesheet" type="text/css" href="style.css"> 
+	<link rel="stylesheet" type="text/css" href="./style.css"> 
 </head>
 <body>
 	<% var incorrect %>
